# pyside-base

./: .cursorrules  .env.example  .gitignore  .gitmodules  README.md  README.vi.md  _loader_.py  main.py  pixi.toml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: template-cleanup.yml
app/tasks/: AdbCommandTask.py  ChainDemoTask.py  ConditionDemoTask.py  CpuIntensiveDemoTask.py  LoopDemoTask.py  SimpleDemoTask.py  SleepDemoTask.py  __init__.py
core/: BaseComponent.py  BaseController.py  Config.py  Decorators.py  Exceptions.py  Logging.py  NetworkManager.py  Observer.py  QtAppContext.py  ServiceLocator.py  SharedCollection.py  TaskSystem.py  Utils.py  WidgetManager.py  __init__.py
core/ack/: AcknowledgmentReceiver.py  AcknowledgmentSender.py  AcknowledgmentTracker.py  __init__.py
core/contracts/: DisposableInterface.py  Message.py  ReplyChannel.py  ServiceProvider.py  (+2 more)
data/: .gitignore
docs/: CLI.md  OVERVIEW.vi.md  TaskSystem.md  app-mind-set.txt  observe.txt
examples/: README.md  task_usage_example.py
scripts/: __init__.py  auto_init_generator.py  clean-line-breaks.py  clean_pyc.py  compile_providers.py  compile_ui.py  fpyglob-linux-amd64  fpyglob-macos-amd64  generate.py  generate_nuitka_imports.py  method_name_normalizer.py  run_coretest.py  run_pytest.py  set_app_info.py  snake2camel.py  task_generator.py  update_task_imports.py
services/: TaskSchedulerService.py  __init__.py
tests/: __init__.py  conftest.py  pytest.ini  requirements.txt
tests_core/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt
(+150 files in other folders)
